added divder in HTML file

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
                 </form>
             </div>
         </div>
+        
+<!-- Everything above this line contains the search bar & up! -->
+-------------------------------------------------------------------------------------------------------------------------------------------------------------------
+-------------                                                                                                                    ----------------------------------
+-------------------------------------------------------------------------------------------------------------------------------------------------------------------
+<!-- Everything below this line contains search result cards! -->
+
+
+
+
+
+
         <div class="row">
             <div class="col-12 results">
                 <!-- EVENTS SHOW UP HERE! -->
