--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <link rel="stylesheet" href="index.css" />
-    <link rel='stylesheet' href="./style.css" />
+    <link rel='stylesheet' href="style.css" />
+    
 </head>
 
 <body>
@@ -49,9 +50,8 @@
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                                 aria-haspopup="true" aria-expanded="false">More</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="#">Art&Theatre</a>
+                                <a class="dropdown-item" href="#">FAmily</a>
                             </div>
                         </li>
                 </div>
@@ -60,9 +60,9 @@
                     <div class="tab-pane fade show active" id="pills-music" role="tabpanel"
                         aria-labelledby="pills-music-tab">
                     </div>
-                    <div class="tab-pane fade" id="pills-sport" role="tabpanel" aria-labelledby="pills-sport-tab">
+                    <div class="tab-pane fade show active" id="pills-sport" role="tabpanel" aria-labelledby="pills-sport-tab">
                     </div>
-                    <div class="tab-pane fade" id="pills-more" role="tabpanel" aria-labelledby="pills-more-tab">
+                    <div class="tab-pane fade show active" id="pills-more" role="tabpanel" aria-labelledby="pills-more-tab">
                     </div>
                 </div>
             </div>
