--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                 </form>
             </div>
-            <div class="row">
+            <div class="row"></div>
                 <div class="col-12 justify-content-center">
                     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                         <li class="nav-item">
