--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>TicketScape</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="script.js" async defer></script>
     <link rel="stylesheet" href="styleCards.css"/>
 </head>
@@ -49,18 +50,19 @@
                                     class="bi bi-file-music-fill" viewBox="0 0 16 16">
                                     <path
                                         d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-.5 4.11v1.8l-2.5.5v5.09c0 .495-.301.883-.662 1.123C7.974 12.866 7.499 13 7 13c-.5 0-.974-.134-1.338-.377-.36-.24-.662-.628-.662-1.123s.301-.883.662-1.123C6.026 10.134 6.501 10 7 10c.356 0 .7.068 1 .196V4.41a1 1 0 0 1 .804-.98l1.5-.3a1 1 0 0 1 1.196.98z" />
-                                </svg>Music</a>
+                                </svg>&nbspMusic</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="pills-sport-tab" data-toggle="pill" href="#pills-sport" role="tab"
-                                aria-controls="pills-sport" aria-selected="false">Sport</a>
+                                aria-controls="pills-sport" aria-selected="false"
+                                ><i class="fas fa-basketball-ball"></i>&nbspSport</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                                 aria-haspopup="true" aria-expanded="false">More</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Art&Theatre</a>
-                                <a class="dropdown-item" href="#">FAmily</a>
+                                <a class="dropdown-item" id="pills-artTheatre-tab" data-toggle="pill" href="#">Art&Theatre</a>
+                                <a class="dropdown-item" id="pills-family-tab" data-toggle="pill" href="#">Family</a>
                             </div>
                         </li>
                 </div>
