--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <script src="script.js" async defer></script>
-    <link rel="stylesheet" href="styleCards.css"/>
+    <link rel="stylesheet" href="styleCards.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-    <body>
+<body>
+    <div class="container">
         <div class="container">
             <div class="row">
                 <div class="col-12 header text-center">
-                    <h2 class="display-2">TicketScape</h2>
+                    <h2 class="display-4">TicketScape</h2>
                     <p>Search for event you'd like to attend!</p>
                     <p>Save them to your favorites. Buy tickets when you're
                         ready.</p>
@@ -24,21 +26,24 @@
             <div class="col-12 search">
                 <form id="search-form">
                     <div class="input-group input-group-lg">
-                        <input class="form-control search-bar" id="search-bar-keyword" placeholder=" Search Keyword..." />
+                        <input class="form-control search-bar" id="search-bar-keyword"
+                            placeholder="Keyword" />
                         <!-- created two more input elements and added ids used in for javascript -->
-                        <input class="form-control search-bar" id="search-bar-city" placeholder="Search City...">
+                        <input class="form-control search-bar" id="search-bar-city" placeholder="City">
                         <!-- <input class="form-control search-bar" id="search-bar-state" placeholder="Search By State..." /> -->
                         <select name="search-bar-state" id="search-bar-state">
-                            <option  selected value="">Search State</option>
+                            <option selected value="">State</option>
                             <option value="TX">Texas</option>
                         </select>
-                        
+
                         <button class="btn btn-primary input-group-btn" type="submit">
                             Search
                         </button>
                     </div>
                 </form>
             </div>
+        </div>
+        <div>
             <div class="row">
                 <div class="col-12 justify-content-center">
                     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
@@ -69,38 +74,20 @@
                     <div class="tab-pane fade show active" id="pills-music" role="tabpanel"
                         aria-labelledby="pills-music-tab">
                     </div>
-                    <div class="tab-pane fade show active" id="pills-sport" role="tabpanel" aria-labelledby="pills-sport-tab">
+                    <div class="tab-pane fade show active" id="pills-sport" role="tabpanel"
+                        aria-labelledby="pills-sport-tab">
                     </div>
-                    <div class="tab-pane fade show active" id="pills-more" role="tabpanel" aria-labelledby="pills-more-tab">
+                    <div class="tab-pane fade show active" id="pills-more" role="tabpanel"
+                        aria-labelledby="pills-more-tab">
                     </div>
                 </div>
             </div>
         </div>
-
+    </div>
+    <!-- cards -->
         <div class="row">
-            <div class="col-12 results">                
-                <!-- EVENTS SHOW UP HERE! -->
+            <div class="col-12 results">
                 <div class="row" id="results-box">
-                    <div class="col-12 col-md-6 ">
-                        <div class="card mb-3" style="max-width: 540px;">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="https://images.pexels.com/photos/3408744/pexels-photo-3408744.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                                        class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Event title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit longer.
-                                        </p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                     <div class="col-12 col-md-6">
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
@@ -109,25 +96,12 @@
                                         class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
-                                    <div class="row">
-                                        <div class="col text-right mt-2">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
-                                                fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16"
-                                                justify-content-right>
-                                                <path fill-rule="evenodd"
-                                                    d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z" />
-                                                <path
-                                                    d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
-                                            </svg>
-                                        </div>
-                                    </div>
                                     <div class="card-body">
-                                        <h5 class="card-title">Event title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit longer.
-                                        </p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
+                                        <h5 class="card-title">Better Than Ezra</h5>
+                                        <h6 class="card-date">January 6, 2021</h6>
+                                        <h6 class="card-location-venue">Atlanta, GA @ State Farm Arena</h6>
+                                        <p class="card-last-update"><small class="text-muted">Last updated 3 mins
+                                                ago</small></p>
                                     </div>
                                     <div class="row">
                                         <div class="col mb-2 ml-2 buttons-event-heart">
@@ -145,42 +119,10 @@
                                 </div>
                             </div>
                         </div>
-
-
-                        <div class="col-12 col-md-6">
-                            <div class="card mb-3" style="max-width: 540px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img
-                                            src="https://images.pexels.com/photos/3408744/pexels-photo-3408744.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                                            class="img-fluid rounded-start"
-                                            alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <p class="card-text">This is a wider
-                                                card with supporting text below
-                                                as a
-                                                natural
-                                                lead-in to additional content.
-                                                This content is a little bit
-                                                longer.</p>
-                                            <p class="card-text"><small
-                                                    class="text-muted">Last
-                                                    updated 3 mins ago</small>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
-
                 </div>
             </div>
         </div>
-    </div>
     <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
