added the proper html to the card inside the js.file as well as added the local storage save function

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Better Than Ezra</h5>
-                                        <h6 class="card-date">January 6, 2021</h6>
+                                        <h6 class="card-date-time">January 6, 2021 - 7:30</h6>
                                         <h6 class="card-location-venue">Atlanta, GA @ State Farm Arena</h6>
                                         <p class="card-last-update"><small class="text-muted">Last updated 3 mins
                                                 ago</small></p>
@@ -164,14 +164,14 @@
                                     <div class="row">
                                         <div class="col mb-2 ml-2 buttons-event-heart">
                                             <button type="button" class="btn btn-primary">Event Details</button>
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
+                                            <button class="add-event btn"  style="border: 0px; background-color: white; outline: none;"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
                                                 fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16"
                                                 justify-content-right>
                                                 <path fill-rule="evenodd"
                                                     d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z" />
                                                 <path
                                                     d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
-                                            </svg>
+                                            </svg></button>
                                         </div>
                                     </div>
                                 </div>
