added favorites button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="script.js" async defer></script>
     <link rel="stylesheet" href="styleCards.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a href="favorites.html" <button type="button" class="btn btn-primary btn-lg fa-pull-right" style= "margin: 10px">Favorites</button> 
+    </a>
 </head>
 
 <body>
