cleaned up some coding issues and erroneous code blocks used for testing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="script.js" async defer></script>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <a href="favorites1.html" class="btn btn-primary btn-lg fa-pull-right"
+    <a href="favorites1.html" class="btn btn-light btn-lg fa-pull-right"
         style="margin: 10px">Favorites
     </a>
 </head>
@@ -117,7 +117,7 @@
                         <!-- added the above options for states -->
 
 
-                        <button class="btn btn-primary input-group-btn" type="submit">
+                        <button class="btn btn-dark input-group-btn" type="submit">
                             Search
                         </button>
                     </div>
@@ -130,23 +130,23 @@
                 <div class="col-12 justify-content-center">
                     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="pills-music-tab" data-toggle="pill" href="#pills-music"
+                            <a style="color: black;"    class="nav-link" id="pills-music-tab" data-toggle="pill" href="#pills-music"
                                 role="tab" aria-controls="pills-music" aria-selected="true"><i class="fa fa-music"></i>&nbspMusic</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="pills-sport-tab" data-toggle="pill" href="#pills-sport" role="tab"
+                            <a style="color: black;" class="nav-link" id="pills-sport-tab" data-toggle="pill" href="#pills-sport" role="tab"
                                 aria-controls="pills-sport" aria-selected="false"><i
-                                    class="fas fa-basketball-ball"></i>&nbspSport</a>
+                                    class="fas fa-basketball-ball"></i>&nbspSports</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                        <!-- <li class="nav-item">
+                            <a style="color: black;" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                                 aria-haspopup="true" aria-expanded="false">More</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" id="pills-artTheatre-tab" data-toggle="pill"
                                     href="#">Art&Theatre</a>
                                 <a class="dropdown-item" id="pills-family-tab" data-toggle="pill" href="#">Family</a>
                             </div>
-                        </li>
+                        </li> -->
                 </div>
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
@@ -172,9 +172,7 @@
 
 
 
-    <div class="container">
-        <div id="map"></div>
-    </div>
+    
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
