--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <script src="script.js" async defer></script>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <a href="favorites1.html" class="btn btn-primary btn-lg fa-pull-right"
-        style="margin: 10px">Favorites
-    </a>
 </head>
 
 <body>
+
+        <nav class="navbar navbar-dark bg-dark">
+            <span class="navbar-brand mb-0 h1">Live is better.</span>
+        </nav>
 
     <!-- modal -->
     <div class="modal fade" id="eventModal" tabindex="-1">
@@ -131,7 +132,8 @@
                     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="pills-music-tab" data-toggle="pill" href="#pills-music"
-                                role="tab" aria-controls="pills-music" aria-selected="true"><i class="fa fa-music"></i>&nbspMusic</a>
+                                role="tab" aria-controls="pills-music" aria-selected="true"><i
+                                    class="fa fa-music"></i>&nbspMusic</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="pills-sport-tab" data-toggle="pill" href="#pills-sport" role="tab"
@@ -163,24 +165,31 @@
             </div>
         </div>
     </div>
+
     <!-- cards -->
-    <div class="container">    
-            <div class="results row" id="results-box">
-            </div>
-    </div>
-
-
-
     <div class="container">
-        <div id="map"></div>
+        <div class="results row" id="results-box">
+        </div>
     </div>
+
+
+    
+    <div class="container">
+        <div>
+            <img src="concert.jpg"
+            class="img-fluid" alt="concert crowd front lit from stage lights">
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="google.js" async defer></script>
     <script
