added css style for favorites page, navbar, and updated button and layout

--- a/favorites1.html
+++ b/favorites1.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Favorites</title>
-        <link rel="stylesheet"
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
+    <head></head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favorites</title>
+    <!-- CSS only -->
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
+    <nav class="navbar navbar-dark bg-dark">
+            <span class="navbar-brand mb-0 h1">Your Favorites Here.</span>
+        </nav>
+    <link rel="stylesheet" href="favorites.css" />
+</head>
 
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 header text-center">
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 header text-center">
+                <a href="index.html" class="btn btn-light btn-lg"
+                        style="margin: 10px">Home</a>
                     <h2 class="display-2">TicketScape Favorites</h2>
-                    <a href="index.html">TicketScape Home</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 results">
                     <!-- EVENTS SHOW UP HERE! -->
                     <div>
-                        <h2></h2>
                         <div class="event">
                             <div class="container">
                                 <div class="row event-container">
