--- a/favorites1.html
+++ b/favorites1.html
@@ -67,6 +67,12 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkoylVvZXvTjhW1WlbW8_iGIQHhD_H0ts&libraries=&v=weekly"
         async></script>
+        <footer style='margin-top: 15px;' >
+            <nav class="navbar navbar-dark bg-dark">
+                <span class="navbar-brand mb-0 h1">&copyCopyright 2021</span>
+                <span style="color: white;">Janine - Suvdaa - SemaJ - Andrew</span>
+            </nav>
+        </footer>
 </body>
 
 </html>
